removed exit comman if make returned a non-zero exit code

--- a/src/Makefile
+++ b/src/Makefile
@@ -64,7 +64,7 @@ default:	pkg
 copyright pkg rpm clean::
 	for i in $(SRCDIRS) ; do \
 		cd $$i; \
-		$(MAKE) $@ || exit 2 ; \
+		$(MAKE) $@; \
 		cd ..; \
 	done
 
